<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btniniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        />

    <Button
        android:id="@+id/btnrespuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/button3"
        />

    <Button
        android:id="@+id/btnpuntaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button4"
        />

    <Button
        android:id="@+id/btndatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        />

</LinearLayout>