<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".JuegoActivity">
    <TextView
        android:id="@+id/textview11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.04"
        android:text="@string/textview7"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textSize="18sp"
        />

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textview11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.04"
        >

        <TextView
            android:id="@+id/textview10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_alignParentLeft="true"
            />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/relative1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        >
        <EditText
            android:id="@+id/edtrespuesta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/edittext1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtlayout2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.04"
        android:textColor="@color/black"
        android:textSize="15sp"
        />

    <LinearLayout
        android:id="@+id/btnlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textview3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.04"
        android:orientation="horizontal"
        android:gravity="end"
        >

        <Button
            android:id="@+id/btnregresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button7"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/btnenviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/button6"
            android:textAllCaps="false"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>